# bibdata

./: .gitattributes  .gitignore  .gitmodules  DESCRIPTION  dagster.yaml  pyproject.toml
.github/workflows/: static.yml
data/: index.html
data/cnb/: cnb-overview.html  cnb.parquet
data/dnb/: dnb-overview.html  dnb.parquet  dnb_2.parquet  dnb_3.parquet  dnb_4.parquet
data/erb/: erb-overview.html  erb.parquet
data/estc/: estc-overview.html
data/fennica/: fennica-overview.html  fennica.parquet
data/gnd/: gnd-overview.html  gnd.parquet
data/hpb/: hpb-overview.html
data/istc/: istc-overview.html  istc.parquet
data/plnb/: plnb.parquet
data/ptnb/: ptnb-overview.html  ptnb.parquet
data/schema-info/: gcc_pica_fields.tsv  gcc_pica_subfields.tsv  k10_pica_fields.tsv  k10_pica_subfields.tsv  marc_fields.tsv  marc_subfields.tsv  pica_fields.tsv  pica_subfields.tsv
data/vd17/: vd17-overview.html  vd17.parquet
data/vd18/: vd18-overview.html  vd18.parquet
data/viaf/: viaf-overview.html  viaf.parquet  viaf_2.parquet  viaf_3.parquet
src/: bib-overview.Rmd  crawl-oai-pmh.py  crawl-sru.py  create-index.py  create-overview.R  download-file.py  process-istc.py
src/dagster_assets/: definitions.py  utils.py
src/dagster_assets/defs/: cnb.py  dnb.py  erb.py  estc.py  fennica.py  gnd.py  hpb.py  index.py  istc.py  plnb.py  ptnb.py  vd17.py  vd18.py  viaf.py
